# crutils

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLibconfig.cmake  FindX11.cmake  Findhelp2man.cmake
crutilsd/: config.cc  config.h  crutilsd.cc  daemon.cc  daemon.h  dbus.cc  dbus.h  device.cc  device.h  keytoc.cc  log.cc  log.h  makefile
doc/: CMakeLists.txt  doxygen.conf.in
extra/: CMakeLists.txt  codereader.conf
extra/ci/: check_format.sh
extra/license/: check_license_header.sh  header.c  header.txt
libcrutils/: crutils.cc  crutils.h  crutils_dbus.cc  crutils_thread.cc  main.cc  makefile
src/: CMakeLists.txt  cmake-config.h.in
src/codereader-bin/: CMakeLists.txt  codereader.c  config.h.in
src/crutilsd/: CMakeLists.txt  config.cpp  config.h  crutilsd.cpp  dbus.cpp  dbus.h  keytoc.cpp  keytoc.h  log.cpp  log.h
src/drivers/: CMakeLists.txt
src/drivers/lxinput/: CMakeLists.txt  close.c  keytoc.c  lxinput.h  open.c  read.c  strerror.c
src/drivers/xinput2/: CMakeLists.txt  xinput2.c
src/libcodereader/: CMakeLists.txt  close.c  codereader-internal.h  codereader.h  config.h.in  device.h  empty.c  internal.h  open.c  read.c
src/libcodereader/config/: CMakeLists.txt  config.h  read_config.c
src/libcodereader/driver/: CMakeLists.txt  driver.h  load.c  unload.c
src/libcodereader/stream/: CMakeLists.txt  close.c  open.c  read.c  stream.h
src/libcrutils/: CMakeLists.txt  crutils.cpp  crutils.h  crutils_dbus.cpp  crutils_thread.cpp  main.cpp
tests/: CMakeLists.txt
tests/codereader-bin/: CMakeLists.txt  codereader_bin.conf
